--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "import xsar\n",
     "from xsarsea import windspeed\n",
+    "import xsarsea\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "import holoviews as hv\n",
@@ -50,7 +51,8 @@
    "source": [
     "## Available models\n",
     "\n",
-    "Available models can be retrieved with [xsarsea.windspeed.available_models](../basic_api.rst#xsarsea.windspeed.available_models)"
+    "Available models can be retrieved with [xsarsea.windspeed.available_models](../basic_api.rst#xsarsea.windspeed.available_models).\n",
+    "By default, analytical models are already in the dataframe. "
    ]
   },
   {
@@ -68,19 +70,42 @@
    "id": "f4999b03",
    "metadata": {},
    "source": [
-    "## Available models\n",
+    "## Add all models\n",
     "\n",
-    "Adding gmfs_impl (analytical models)  with [xsarsea.windspeed.gmfs.GmfModel.activate_gmfs_impl](../basic_api.rst#xsarsea.windspeed.gmfs.GmfModel.activate)"
+    "<span style=\"color:red\">replace paths by your own path containing all luts</span>\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bdf23bd",
-   "metadata": {},
+   "id": "583fccc9-3b9a-404c-9823-0f4c99aa0d8b",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "windspeed.gmfs.GmfModel.activate_gmfs_impl()"
+    "nc_luts_path = xsarsea.get_test_file('nc_luts_reduce')\n",
+    "path_cmod7 = xsarsea.get_test_file(\"cmod7_and_python_script\")\n",
+    "windspeed.register_luts(nc_luts_path, path_cmod7)\n",
+    "windspeed.available_models()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1a91ca0-6246-48fa-b6d0-10fe4815298f",
+   "metadata": {},
+   "source": [
+    "## Add models by type \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b79464cf",
+   "metadata": {},
+   "source": [
+    "### Adding analytical models\n",
+    "\n",
+    "they are already available in the dataframe by default "
    ]
   },
   {
@@ -100,17 +125,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nc_luts_path = xsar.get_test_file('nc_luts_reduce')\n",
+    "nc_luts_path = xsarsea.get_test_file('nc_luts_reduce')\n",
     "windspeed.register_nc_luts(nc_luts_path)\n",
     "windspeed.available_models()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4118ad0e-11a7-4d6e-970e-50a371af44f3",
+   "id": "856cf5ce",
    "metadata": {},
    "source": [
-    "## Addind CMOD7\n"
+    "### Adding cmod7"
    ]
   },
   {
@@ -125,32 +150,6 @@
     "    windspeed.register_cmod7(path_cmod7)\n",
     "except Exception as e:\n",
     "    print(e)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2a4321c1-e185-47a6-bb0d-e4f27dcea819",
-   "metadata": {},
-   "source": [
-    "### Adding Sarwing models (LUT)\n",
-    "\n",
-    "Sarwing model are not available by default, because they needs to be loaded from external file with [xsarsea.windspeed.register_sarwing_luts](../basic_api.rst#xsarsea.windspeed.register_sarwing_luts)\n",
-    "\n",
-    "A basic subset of sarwing lut can be retrieved with `xsar.get_test_file('sarwing_luts_subset')`. \n",
-    "\n",
-    "To get full sarwing luts, download them from https://cyclobs.ifremer.fr/static/sarwing_datarmor/xsardata/sarwing_luts, or use path `/home/datawork-cersat-public/cache/project/sarwing/GMFS/v1.6` (ifremer only)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85e9e0fd-6b5f-4fd7-a74e-5af3a56bcec6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sarwing_luts_subset_path = xsar.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.register_sarwing_luts(sarwing_luts_subset_path)\n",
-    "windspeed.available_models()"
    ]
   },
   {
@@ -254,7 +253,7 @@
    "id": "9df945ab",
    "metadata": {},
    "source": [
-    "It won't have the same impact on SarwingLutModel or [NcLutModel](../basic_api.rst#xsarsea.windspeed.models.NcLutModel) or [cmod7Model](../basic_api.rst#xsarsea.windspeed.gmfs.cmod7Model).\n",
+    "It won't have the same impact on [NcLutModel](../basic_api.rst#xsarsea.windspeed.models.NcLutModel) or [cmod7Model](../basic_api.rst#xsarsea.windspeed.gmfs.cmod7Model).\n",
     "\n",
     "Indeed, these are saved at at desired format with a certain resolution. \n",
     "\n",
@@ -269,7 +268,7 @@
    "outputs": [],
    "source": [
     "# here we specify the exact same params than the saved LUT have\n",
-    "windspeed.get_model('nc_lut_sarwing_lut_cmodms1ahw').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})"
+    "windspeed.get_model('nc_lut_cmodms1ahw').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})"
    ]
   },
   {
@@ -280,7 +279,7 @@
    "outputs": [],
    "source": [
     "# here we specify different params than the saved LUT have : interpolation is made\n",
-    "windspeed.get_model('nc_lut_sarwing_lut_cmodms1ahw').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.2, 'resolution' : 'high'})"
+    "windspeed.get_model('nc_lut_cmodms1ahw').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.2, 'resolution' : 'high'})"
    ]
   },
   {
@@ -288,7 +287,7 @@
    "id": "2dd55b26",
    "metadata": {},
    "source": [
-    "## In practice\n",
+    "## In practice for wind retrieval\n",
     "[xsarsea.windspeed.invert_from_model](../basic_api.rst#xsarsea.windspeed.invert_from_model) can be called with **kwargs.\n",
     "\n",
     "We can use kwargs to force the use of high resolution Luts. \n",
@@ -352,6 +351,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "301d9d62",
+   "metadata": {},
+   "source": [
+    "Note : \n",
+    "    if defer = True, you will have to use again xsarsea.windspeed.gmfs.GmfModel.activate_gmfs_impl() to activate the new model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "ab5d131e-ca80-4095-b24b-511c30c22198",
@@ -411,8 +419,8 @@
     "# loading low resolution & interpolating \n",
     "windspeed.get_model('nc_lut_gmf_cmod7_Rlow_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})\n",
     "# or \n",
-    "# loading high resolution\n",
-    "windspeed.get_model('nc_lut_gmf_cmod7_Rhigh_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})"
+    "# loading high resolution [not computed in the doc cause nc_lut_gmf_cmod7_Rhigh_hh_mouche1 is too big]\n",
+    "#windspeed.get_model('nc_lut_gmf_cmod7_Rhigh_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})"
    ]
   },
   {
@@ -478,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_compare([ 'gmf_dummy', 'nc_lut_sarwing_lut_cmodms1ahw'] )"
+    "model_compare([ 'gmf_dummy', 'nc_lut_cmodms1ahw'] )"
    ]
   },
   {
