--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddb8b3b-5e67-4dc2-b36b-e234510a80ff",
+   "id": "f81f9e26-4e02-4f9e-a2dc-7993f5e4be6c",
    "metadata": {},
    "source": [
     "> .. warning::\n",
     "   **Use of ancillary wind**\n",
-    "> On this notebook, we changed from `ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind)` to `sarwing_ds.owi_ancillary_wind`` ; then it won't match sarwing results anymore"
+    "> \n",
+    "> On this notebook, we changed from `ancillary_wind = -np.conj(sarwing_ds.owi_ancillary_wind)` to `sarwing_ds.owi_ancillary_wind` ; then it won't match sarwing results anymore"
    ]
   },
   {
@@ -38,17 +39,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69879cf5-1185-47e4-9407-060292b2b44e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sarwing_luts_subset_path = xsarsea.utils.get_test_file('sarwing_luts_subset')\n",
-    "windspeed.register_sarwing_luts(sarwing_luts_subset_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "ee5ca192-3120-4a5b-b5f2-4fce5218e90f",
    "metadata": {},
    "outputs": [],
@@ -61,20 +51,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa29e9e0-ed13-4448-bdbe-c61a6b2f33e3",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Requirements for inversion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "214f46fe-6169-4a76-a68e-b7c8a205b5fa",
+   "id": "c3067241-0202-4f11-99f8-7251eb461c78",
    "metadata": {},
    "source": [
-    "xsar is required"
+    "## Requirements for inversion"
    ]
   },
   {
@@ -105,7 +85,7 @@
    "outputs": [],
    "source": [
     "safe_path = xsarsea.get_test_file(\"S1A_EW_GRDM_1SDV_20230217T002336_20230217T002412_047268_05AC30_Z005.SAFE\")\n",
-    "s1meta = xsar.Sentinel1Meta(safe_path)\n"
+    "s1meta = xsar.Sentinel1Meta(safe_path)"
    ]
   },
   {
@@ -135,15 +115,15 @@
    "metadata": {},
    "source": [
     "land mask:\n",
-    "not applied yet "
+    "not applied in the doc"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "95eb760f-20fc-4fa6-b556-c5804a7e06d4",
+   "id": "91da3760-5a71-4af7-a673-3e0e9192dcc3",
    "metadata": {},
    "source": [
-    "getting associated ancillary data (ecmwf)"
+    "## getting ancillary data"
    ]
   },
   {
@@ -221,8 +201,9 @@
     "tags": []
    },
    "source": [
-    "creation of variables of interest for inversion \n",
+    "## variables of interest\n",
     "\n",
+    "creation of variables of interest for inversion \n",
     "here we could add a land/ice mask."
    ]
   },
@@ -264,20 +245,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00eb8706-f7cc-419a-97c9-5898178926bc",
-   "metadata": {
-    "tags": []
-   },
+   "id": "b82cf244-7e9b-481e-bdfb-2599fa8d92ca",
+   "metadata": {},
    "source": [
-    "## Inversion"
+    "## Inversion\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "dc83dd2b-44ff-46ab-b360-a77c52ed2ce3",
+   "id": "5936708c-c060-429f-89bc-718b812e8ca1",
    "metadata": {},
    "source": [
-    "### inversion parameters"
+    "### inversion parameters\n"
    ]
   },
   {
@@ -288,7 +267,7 @@
    "outputs": [],
    "source": [
     "apply_flattening = True\n",
-    "GMF_VV_NAME = \"cmod5n\"\n",
+    "GMF_VV_NAME = \"gmf_cmod5n\"\n",
     "GMF_VH_NAME = \"gmf_s1_v2\""
    ]
   },
@@ -339,17 +318,7 @@
    "id": "20801efb-5870-47d9-8fb1-bb3e499f9a34",
    "metadata": {},
    "source": [
-    "### get windspeed & direction in dfferent polarizations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99949fd6-9950-4be8-b9c1-3b906f60b1b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "windspeed.gmfs.GmfModel.activate_gmfs_impl()"
+    "### retrieve windspeed & direction in dfferent polarizations"
    ]
   },
   {
@@ -432,6 +401,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7dff75-3c71-4fb7-a7a9-da823fc55df9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "windspeed_co = dataset.windspeed_co.compute()  # compute data if needed\n",
+    "windspeed_cross = dataset.windspeed_cross\n",
+    "windspeed_dual = dataset.windspeed_dual.compute()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7cecc22f-f6be-43ad-bb72-0e243e3b15a9",
    "metadata": {},
@@ -446,9 +427,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hv.Image(dataset.windspeed_co.compute(), label='wind speed co-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
-    "hv.Image(dataset.windspeed_cross, label='wind speed cr-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425) + \\\n",
-    "hv.Image(dataset.windspeed_dual.compute(), label='wind speed dual-pol').opts(cmap='jet',colorbar=True,clim=(0,80),height=400, width=425)"
+    "import matplotlib.pyplot as plt\n",
+    "import cartopy.crs as ccrs\n",
+    "import cartopy.feature as cfeature\n",
+    "\n",
+    "projection = ccrs.PlateCarree()\n",
+    "fig, axs = plt.subplots(1, 3, figsize=(18, 6), subplot_kw={'projection': projection})\n",
+    "\n",
+    "# Wind Speed Co-Pol\n",
+    "img0 = axs[0].pcolormesh(dataset.longitude, dataset.latitude, windspeed_co, cmap='jet', vmin=0, vmax=80, transform=ccrs.PlateCarree())\n",
+    "axs[0].add_feature(cfeature.COASTLINE)\n",
+    "axs[0].add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "axs[0].set_title('Wind Speed Co-Pol')\n",
+    "gl0 = axs[0].gridlines(draw_labels=True, color='gray', alpha=0.5, linestyle='--')\n",
+    "gl0.top_labels = gl0.right_labels = False\n",
+    "\n",
+    "# Wind Speed Cr-Pol\n",
+    "img1 = axs[1].pcolormesh(dataset.longitude, dataset.latitude, windspeed_cross, cmap='jet', vmin=0, vmax=80, transform=ccrs.PlateCarree())\n",
+    "axs[1].add_feature(cfeature.COASTLINE)\n",
+    "axs[1].add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "axs[1].set_title('Wind Speed Cr-Pol')\n",
+    "gl1 = axs[1].gridlines(draw_labels=True, color='gray', alpha=0.5, linestyle='--')\n",
+    "gl1.top_labels = gl1.right_labels = False\n",
+    "\n",
+    "# Wind Speed Dual-Pol\n",
+    "img2 = axs[2].pcolormesh(dataset.longitude, dataset.latitude, windspeed_dual, cmap='jet', vmin=0, vmax=80, transform=ccrs.PlateCarree())\n",
+    "axs[2].add_feature(cfeature.COASTLINE)\n",
+    "axs[2].add_feature(cfeature.BORDERS, linestyle=':')\n",
+    "axs[2].set_title('Wind Speed Dual-Pol')\n",
+    "gl2 = axs[2].gridlines(draw_labels=True, color='gray', alpha=0.5, linestyle='--')\n",
+    "gl2.top_labels = gl2.right_labels = False\n",
+    "\n",
+    "fig.colorbar(img0, ax=axs, orientation='horizontal', fraction=0.02, pad=0.1, aspect=40)\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -500,11 +511,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df234faf-a32b-459a-b90b-ffc4e3d254a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "93e46998-9c0e-4e55-ac62-b13a7393f907",
    "metadata": {},
    "source": [
-    "### save as a level-2 netcdf"
+    "## saving"
    ]
   },
   {
@@ -573,40 +592,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ds_1000.to_netcdf(\"my_L2_product\")"
+    "#ds_1000.to_netcdf(\"my_L2_product.nc\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ef458c7-ddcf-4ab9-98f2-cbe2157377c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3ba99aa5-ad0c-48ca-afbb-ec454c4720e4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d99d681b-fc05-4dde-93d5-2790c2f0bceb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6d8da25-2b67-4398-8f54-fd3be7b376b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
