small change wrt numpy>2.0 and doc compiling + pytest success

--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fd90b4bb-b6e6-4a82-8529-f1768e66e3fd",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Wind speed inversion from level-1 product "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81f9e26-4e02-4f9e-a2dc-7993f5e4be6c",
+   "id": "1",
    "metadata": {},
    "source": [
     "> .. warning::\n",
@@ -22,24 +22,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc7e5e16-f320-4641-856e-43584913416f",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import holoviews as hv\n",
+    "import numpy as np\n",
+    "import xarray as xr\n",
+    "\n",
     "import xsarsea\n",
     "from xsarsea import windspeed\n",
-    "import xarray as xr\n",
-    "import numpy as np\n",
-    "import holoviews as hv\n",
+    "\n",
     "hv.extension('bokeh')\n",
     "\n",
-    "import os,sys,re, cv2"
+    "import os\n",
+    "import re\n",
+    "import sys\n",
+    "\n",
+    "import cv2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee5ca192-3120-4a5b-b5f2-4fce5218e90f",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3067241-0202-4f11-99f8-7251eb461c78",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Requirements for inversion"
@@ -60,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9aa398-b5f9-4a08-980e-521ecf819545",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f36bebe-e748-4d35-af29-a3abae080bf8",
+   "id": "6",
    "metadata": {
     "tags": []
    },
@@ -80,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85515210-8547-42f7-bd18-91c711aad538",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e76f888-98f9-4574-b289-894febca9da5",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,17 +107,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcf535b6-518c-49be-93b1-8b5fed6f1ae6",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "from xsarsea.utils import _load_config\n",
+    "\n",
     "config = _load_config()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "61aef250-21df-44c2-b7da-98a184b54b46",
+   "id": "10",
    "metadata": {},
    "source": [
     "land mask:\n",
@@ -120,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91da3760-5a71-4af7-a673-3e0e9192dcc3",
+   "id": "11",
    "metadata": {},
    "source": [
     "## getting ancillary data"
@@ -129,23 +136,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b5ede7a-4f28-45c6-884f-c09c6df88741",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
     "s1meta.set_raster('ecmwf_0100_1h',config[\"path_ecmwf_0100_1h\"])\n",
     "import datetime\n",
+    "\n",
     "for ecmwf_name in ['ecmwf_0100_1h' ]:\n",
     "    ecmwf_infos = s1meta.rasters.loc[ecmwf_name]\n",
     "    ecmwf_file = ecmwf_infos['get_function'](ecmwf_infos['resource'], date=datetime.datetime.strptime(s1meta.start_date, '%Y-%m-%d %H:%M:%S.%f'))\n",
     "    ecmwf_file = xsarsea.get_test_file(ecmwf_file[1].split('/')[-1],iszip=False)\n",
-    "    map_model = { '%s_%s' % (ecmwf_name, uv) : 'model_%s' % uv for uv in ['U10', 'V10'] }"
+    "    map_model = { f'{ecmwf_name}_{uv}' : f'model_{uv}' for uv in ['U10', 'V10'] }"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad9df470-2d47-4a3c-947c-e350df90facf",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a065ee2-c7bd-4fbd-bcc8-78c2ce80b0cd",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f770e5ab-680f-4fd1-913a-aeb91c642e79",
+   "id": "15",
    "metadata": {
     "tags": []
    },
@@ -175,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f32a7e32-2bba-42c6-b33b-a8d61b281188",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1567f7dd-fb38-412c-a0d5-830a23803ecd",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74c43fa8-2b9d-4ea6-a5b4-c52e1737226d",
+   "id": "18",
    "metadata": {
     "tags": []
    },
@@ -210,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "092961ad-6002-41ee-950d-565e4391c44f",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73f2e4a8-005b-40d2-a3c6-f01d261d6caa",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab6639ba-be9b-4736-99d0-c65ab338b72f",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b82cf244-7e9b-481e-bdfb-2599fa8d92ca",
+   "id": "22",
    "metadata": {},
    "source": [
     "## Inversion\n"
@@ -253,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5936708c-c060-429f-89bc-718b812e8ca1",
+   "id": "23",
    "metadata": {},
    "source": [
     "### inversion parameters\n"
@@ -262,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "215d686d-0a5a-4326-9d5d-40a2327dc624",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e1e65b8-2d63-4942-901a-9ae71df8dbde",
+   "id": "25",
    "metadata": {},
    "source": [
     "apply flattening or not"
@@ -282,22 +290,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e03f542e-b101-434c-9cc7-6136cf5734a1",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
     "nesz_cr = dataset.nesz.isel(pol=1) #(no_flattening)\n",
     "if apply_flattening : \n",
-    "    dataset=dataset.assign(nesz_VH_final=(['line','sample'],windspeed.nesz_flattening(nesz_cr, dataset.incidence)))\n",
+    "    tmp = windspeed.nesz_flattening(nesz_cr, dataset.incidence)\n",
+    "    tmp.name = 'nesz_VH_final'\n",
+    "    print(tmp)\n",
+    "    dataset=dataset.assign({'nesz_VH_final':tmp})\n",
     "    dataset['nesz_VH_final'].attrs[\"comment\"] = 'nesz has been flattened using windspeed.nesz_flattening'\n",
     "else :\n",
-    "    dataset=dataset.assign(nesz_VH_final=(['line','sample'],nesz_cr.values))\n",
-    "    dataset['nesz_VH_final'].attrs[\"comment\"] = 'nesz has not been flattened'"
+    "    # dataset=dataset.assign(nesz_VH_final=(['line','sample'],nesz_cr.values))\n",
+    "    tmp = nesz_cr\n",
+    "    tmp.name = 'nesz_VH_final'\n",
+    "    dataset = dataset.assign({'nesz_VH_final':tmp})\n",
+    "    dataset['nesz_VH_final'].attrs[\"comment\"] = 'nesz has not been flattened'\n",
+    "dataset"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aa768465-b693-43ba-b235-faa948fb664f",
+   "id": "27",
    "metadata": {},
    "source": [
     "compute dsig_cr (mix between polarisations) using the last version : \"gmf_s1_v2\""
@@ -306,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb3112c3-dcd1-4090-949a-6aff7f42a675",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20801efb-5870-47d9-8fb1-bb3e499f9a34",
+   "id": "29",
    "metadata": {},
    "source": [
     "### retrieve windspeed & direction in dfferent polarizations"
@@ -323,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0368ca66-838c-45b6-bc9d-55919f812c52",
+   "id": "30",
    "metadata": {},
    "source": [
     "define kwargs to parameter LUT resolution\n"
@@ -332,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf38d26-4f78-4f46-b2b0-12b111b5c746",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +356,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc635f8f-c036-45f7-8587-729af7ad6716",
+   "id": "32",
    "metadata": {
     "tags": []
    },
@@ -352,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "840ef5f7-75ca-472d-a2b2-602d0bffff59",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae99bae-91bc-4d96-b62d-58e9a5bc31ef",
+   "id": "34",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
     "tags": []
@@ -385,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21c668a2-bb80-4a6f-bc1c-381d50fa7595",
+   "id": "35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d7dff75-3c71-4fb7-a7a9-da823fc55df9",
+   "id": "36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cecc22f-f6be-43ad-bb72-0e243e3b15a9",
+   "id": "37",
    "metadata": {},
    "source": [
     "windspeeed illustration"
@@ -423,13 +438,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c758117-3b17-441d-b494-4fb072ca5965",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "import cartopy.crs as ccrs\n",
     "import cartopy.feature as cfeature\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "projection = ccrs.PlateCarree()\n",
     "fig, axs = plt.subplots(1, 3, figsize=(18, 6), subplot_kw={'projection': projection})\n",
@@ -464,7 +479,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9032dedb-1197-4080-a7f7-744dfee0f56d",
+   "id": "39",
    "metadata": {},
    "source": [
     "winddir illustration"
@@ -473,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f1afe46-e5f0-43d0-b04f-d81d525d4f19",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79de289d-86e5-448f-a29e-eaee0cc49fab",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,14 +528,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df234faf-a32b-459a-b90b-ffc4e3d254a1",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "93e46998-9c0e-4e55-ac62-b13a7393f907",
+   "id": "43",
    "metadata": {},
    "source": [
     "## saving"
@@ -528,7 +543,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107f4ea6-ebda-48f5-8166-80974064528f",
+   "id": "44",
    "metadata": {},
    "source": [
     "delete useless variables"
@@ -537,7 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6f48f82-5c11-4b3c-8a1e-410808c758a6",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +573,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec01db2-1d85-46c7-a2f1-af3529774a45",
+   "id": "46",
    "metadata": {},
    "source": [
     "remove complex"
@@ -567,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79f31558-4198-4e69-876f-1209288893dc",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90a5642d-da93-4b2d-9372-c75099271f5a",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38c5258f-9b0a-4b8f-bbc9-964c357a92cb",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
