--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4568ec08",
+   "id": "0",
    "metadata": {},
    "source": [
     "# Streaks analysis\n",
@@ -14,22 +14,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5a0730",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import needed modules\n",
-    "import xsar\n",
-    "import xsarsea\n",
-    "import xsarsea.gradients\n",
-    "\n",
-    "import xarray as xr\n",
-    "import numpy as np\n",
-    "import scipy\n",
     "import os\n",
     "import time\n",
     "\n",
     "import holoviews as hv\n",
+    "import numpy as np\n",
+    "import scipy\n",
+    "import xarray as xr\n",
+    "import xsar\n",
+    "\n",
+    "import xsarsea\n",
+    "import xsarsea.gradients\n",
+    "\n",
     "hv.extension('bokeh')\n",
     "import geoviews as gv\n",
     "from holoviews.operation.datashader import rasterize\n"
@@ -38,12 +39,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4ea79fe-2816-4d74-b201-095370f3aaea",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# optional debug messages\n",
     "import logging\n",
+    "\n",
     "logging.basicConfig()\n",
     "logging.getLogger('xsarsea.gradients').setLevel(logging.INFO) # or .setLevel(logging.DEBUG)"
    ]
@@ -51,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29afbe30",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbe38d74",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e52d26e",
+   "id": "5",
    "metadata": {},
    "source": [
     "## General overview\n",
@@ -98,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74e0a5fa",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,27 +146,27 @@
     "streaks_geo = streaks_geo.compute()\n",
     "\n",
     "# plot. Note that hv.VectorField only accept radians, and 0 is West, so we need to reconvert degrees to radians when calling ...\n",
-    "gv.tile_sources.Wikipedia * gv.VectorField(\n",
+    "gv.tile_sources.EsriImagery * gv.VectorField(\n",
     "    (\n",
     "        streaks_geo['longitude'], \n",
     "        streaks_geo['latitude'], \n",
     "        np.pi/2 -np.deg2rad(streaks_geo['streaks_dir']), \n",
     "        streaks_geo['weight']\n",
     "    )\n",
-    ").opts(pivot='mid', arrow_heads=False, tools=['hover'], magnitude='Magnitude')"
+    ").opts(pivot='mid', arrow_heads=False,color='red', tools=['hover'], magnitude='Magnitude',width=800,height=700)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4866732c-a366-4c45-ae06-aa271b8992c2",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "97c9ff4b",
+   "id": "8",
    "metadata": {},
    "source": [
     "> **_WARNING:_**  `hv.VectorField` and `gv.VectorField` don't use degrees north convention, but radian convention, with 0 = East or right\n",
@@ -177,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d76c35e9",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -194,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8db64e59",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5001ec04",
+   "id": "11",
    "metadata": {},
    "source": [
     "### streaks\n",
@@ -215,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f79f3ae4",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c42c677",
+   "id": "13",
    "metadata": {},
    "source": [
     "#### Convertion between image convention and geographic convention\n",
@@ -235,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d72f3b5a",
+   "id": "14",
    "metadata": {},
    "source": [
     "### hist_mean\n",
@@ -248,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bb19085",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1dc02d0",
+   "id": "16",
    "metadata": {},
    "source": [
     "Let's exctract one histogram at an arbitrary position, and plot the histogram.\n",
@@ -268,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d504e5fc",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a0ee5f7",
+   "id": "18",
    "metadata": {},
    "source": [
     "`xsarsea` also provide an interactive drawing class [xsarsea.gradients.PlotGradients](../basic_api.rst#xsarsea.gradients.PlotGradients) that can be used to draw the circular histogram at mouse tap. (needs a live notebook)"
@@ -287,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43bfe478",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71180ae6",
+   "id": "20",
    "metadata": {},
    "source": [
     "`hist_mean_smooth` was smoothed. Let's try `hist_smooth`"
@@ -319,7 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07398ff7",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0aedc0df",
+   "id": "22",
    "metadata": {},
    "source": [
     "Using `source` keyword for `mouse_histogram`, we can link several histrograms"
@@ -340,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbfdb787",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
