--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -22,6 +22,7 @@
    "outputs": [],
    "source": [
     "import xsar\n",
+    "\n",
     "import xsarsea"
    ]
   },
@@ -33,10 +34,12 @@
    "source": [
     "# use holoviews for plots\n",
     "import bokeh.io\n",
+    "\n",
     "bokeh.io.output_notebook()\n",
     "import holoviews as hv\n",
+    "\n",
     "hv.extension('bokeh')\n",
-    "from holoviews.operation.datashader import datashade,rasterize"
+    "from holoviews.operation.datashader import datashade, rasterize"
    ]
   },
   {
@@ -47,6 +50,7 @@
    "source": [
     "# optional debug message\n",
     "import logging\n",
+    "\n",
     "logging.basicConfig()\n",
     "logging.getLogger('xsarsea').setLevel(logging.INFO) # .setLevel(logging.DEBUG) for more messages"
    ]
@@ -188,8 +192,8 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "import numpy as np\n",
+    "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
     "fig, axs = plt.subplots(1, 4, figsize=(20, 5))  \n",
     "\n",
@@ -220,9 +224,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "microdev",
    "language": "python",
-   "name": "python3"
+   "name": "microdev"
   },
   "language_info": {
    "codemirror_mode": {
@@ -234,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
