--- a/docs/examples/xsarsea.ipynb
+++ b/docs/examples/xsarsea.ipynb
@@ -38,8 +38,7 @@
     "bokeh.io.output_notebook()\n",
     "import holoviews as hv\n",
     "\n",
-    "hv.extension('bokeh')\n",
-    "from holoviews.operation.datashader import datashade, rasterize"
+    "hv.extension('bokeh')"
    ]
   },
   {
@@ -181,7 +180,7 @@
     "detrend_vv_gmf_cmod7 = xsarsea.sigma0_detrend(sar_ds.sigma0.sel(pol='VV'), sar_ds.incidence, model='gmf_cmod7')\n",
     "detrend_vv_gmf_cmod5 = xsarsea.sigma0_detrend(sar_ds.sigma0.sel(pol='VV'), sar_ds.incidence, model='gmf_cmod5')\n",
     "detrend_vv_gmf_cmod5n = xsarsea.sigma0_detrend(sar_ds.sigma0.sel(pol='VV'), sar_ds.incidence, model='gmf_cmod5n')\n",
-    "## HH GMF \n",
+    "## HH GMF\n",
     "detrend_vv_gmf_cmod5n_zhangA = xsarsea.sigma0_detrend(sar_ds.sigma0.sel(pol='VV'), sar_ds.incidence, model='cmod5n_Rlow_hh_zhangA')\n"
    ]
   },
@@ -192,16 +191,15 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "from mpl_toolkits.axes_grid1 import make_axes_locatable\n",
     "\n",
-    "fig, axs = plt.subplots(1, 4, figsize=(20, 5))  \n",
+    "fig, axs = plt.subplots(1, 4, figsize=(20, 5))\n",
     "\n",
     "datasets = [detrend_vv_gmf_cmod7, detrend_vv_gmf_cmod5, detrend_vv_gmf_cmod5n, detrend_vv_gmf_cmod5n_zhangA]\n",
     "titles = ['GMF CMOD7', 'GMF CMOD5', 'GMF CMOD5N', 'GMF CMOD5N ZhangA']\n",
     "\n",
     "for ax, data, title in zip(axs, datasets, titles):\n",
-    "    img = ax.pcolormesh(sar_ds.longitude, sar_ds.latitude, data, cmap='gray', vmin=0, vmax=0.4) \n",
+    "    img = ax.pcolormesh(sar_ds.longitude, sar_ds.latitude, data, cmap='gray', vmin=0, vmax=0.4)\n",
     "    ax.set_title(title)\n",
     "    ax.set_xlabel(\"longitude\")\n",
     "    ax.set_ylabel(\"latitude\")\n",
@@ -223,11 +221,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "microdev",
-   "language": "python",
-   "name": "microdev"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -237,8 +230,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
