--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -342,7 +342,6 @@
     "    b1 = 0.004157838450541205\n",
     "    b2 = 3.4735809771069953e-05\n",
     "    \n",
-    "\n",
     "    a = a0 + a1 * inc + a2 * inc ** 2\n",
     "    b = b0 + b1 * inc + b2 * inc ** 2\n",
     "    \n",
@@ -419,7 +418,7 @@
    "source": [
     "# loading low resolution & interpolating \n",
     "windspeed.get_model('nc_lut_gmf_cmod7_Rlow_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})\n",
-    "# or \n",
+    "# or\n",
     "# loading high resolution [not computed in the doc cause nc_lut_gmf_cmod7_Rhigh_hh_mouche1 is too big]\n",
     "#windspeed.get_model('nc_lut_gmf_cmod7_Rhigh_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})"
    ]
@@ -443,16 +442,13 @@
    "source": [
     "\n",
     "def model_compare(compare_models):\n",
-    "    \n",
     "    luts = [ windspeed.get_model(name).to_lut(units='dB')  for name in compare_models]\n",
-    "    \n",
     "    if 'phi' not in luts[0].dims:\n",
     "        kdims=['incidence']\n",
     "        dim_range=dict(incidence=(17,50))\n",
     "    else:\n",
     "        kdims=['incidence', 'phi']\n",
     "        dim_range=dict(incidence=(17,50), phi=(0,360))\n",
-    "    \n",
     "    def model_curve(incidence, phi=None):\n",
     "        if 'phi' not in luts[0].dims:\n",
     "            sel = dict(incidence=incidence)\n",
@@ -463,11 +459,8 @@
     "                hv.Curve(lut.sel(**sel, method='nearest'),'wspd','sigma0', label=lut.attrs['model']) for lut in luts\n",
     "            ]\n",
     "        )\n",
-    "    \n",
-    "    \n",
     "    dmap = hv.DynamicMap(model_curve, kdims=kdims).opts(height=600, width=600)\n",
-    "    return dmap.redim.range(**dim_range)\n",
-    "    \n"
+    "    return dmap.redim.range(**dim_range)"
    ]
   },
   {
@@ -512,11 +505,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -526,8 +514,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
