--- a/docs/examples/streaks.ipynb
+++ b/docs/examples/streaks.ipynb
@@ -19,12 +19,8 @@
    "outputs": [],
    "source": [
     "# import needed modules\n",
-    "import os\n",
-    "import time\n",
-    "\n",
     "import holoviews as hv\n",
     "import numpy as np\n",
-    "import scipy\n",
     "import xarray as xr\n",
     "import xsar\n",
     "\n",
@@ -68,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# open a file a 100m \n",
+    "# open a file a 100m\n",
     "filename = xsar.get_test_file('S1A_IW_GRDH_1SDV_20170907T103020_20170907T103045_018268_01EB76_Z010.SAFE') # irma\n",
     "#filename = xsar.get_test_file('S1B_IW_GRDH_1SDV_20181013T062322_20181013T062347_013130_018428_Z000.SAFE') # bz\n",
     "#filename=xsar.get_test_file('S1B_IW_GRDH_1SDV_20211024T051203_20211024T051228_029273_037E47_Z010.SAFE') # nices streaks\n",
@@ -135,22 +131,22 @@
     "# select needed variables in original dataset, and map them to streaks dataset\n",
     "streaks_geo = sar_ds[['longitude','latitude','ground_heading']].interp(\n",
     "    line=streaks.line,\n",
-    "    sample=streaks.sample, \n",
+    "    sample=streaks.sample,\n",
     "    method='nearest')\n",
     "\n",
     "streaks_geo['weight'] = streaks['weight']\n",
     "\n",
     "# convert directions from image convention to geographic convention\n",
-    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_meteo(np.rad2deg(streaks['angle']), streaks_geo['ground_heading']) \n",
+    "streaks_geo['streaks_dir'] =  xsarsea.dir_sample_to_meteo(np.rad2deg(streaks['angle']), streaks_geo['ground_heading'])\n",
     "\n",
     "streaks_geo = streaks_geo.compute()\n",
     "\n",
     "# plot. Note that hv.VectorField only accept radians, and 0 is West, so we need to reconvert degrees to radians when calling ...\n",
     "gv.tile_sources.EsriImagery * gv.VectorField(\n",
     "    (\n",
-    "        streaks_geo['longitude'], \n",
-    "        streaks_geo['latitude'], \n",
-    "        np.pi/2 -np.deg2rad(streaks_geo['streaks_dir']), \n",
+    "        streaks_geo['longitude'],\n",
+    "        streaks_geo['latitude'],\n",
+    "        np.pi/2 -np.deg2rad(streaks_geo['streaks_dir']),\n",
     "        streaks_geo['weight']\n",
     "    )\n",
     ").opts(pivot='mid', arrow_heads=False,color='red', tools=['hover'], magnitude='Magnitude',width=800,height=700)"
@@ -366,11 +362,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -380,8 +371,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
