--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -33,13 +33,7 @@
     "import xsarsea\n",
     "from xsarsea import windspeed\n",
     "\n",
-    "hv.extension('bokeh')\n",
-    "\n",
-    "import os\n",
-    "import re\n",
-    "import sys\n",
-    "\n",
-    "import cv2"
+    "hv.extension('bokeh')"
    ]
   },
   {
@@ -222,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Variables of interest \n",
+    "### Variables of interest\n",
     "#xsar_obj.dataset['land_mask'].values = cv2.dilate(xsar_obj.dataset['land_mask'].values.astype('uint8'),np.ones((3,3),np.uint8),iterations = 3)\n",
     "#xsar_obj.dataset['sigma0_ocean'] = xr.where(xsar_obj.dataset['land_mask'], np.nan, xsar_obj.dataset['sigma0'].compute()).transpose(*xsar_obj.dataset['sigma0'].dims)\n",
     "#xsar_obj.dataset['sigma0_ocean'] = xr.where(xsar_obj.dataset['sigma0_ocean'] <= 0, 1e-15, xsar_obj.dataset['sigma0_ocean'])"
@@ -295,7 +289,7 @@
    "outputs": [],
    "source": [
     "nesz_cr = dataset.nesz.isel(pol=1) #(no_flattening)\n",
-    "if apply_flattening : \n",
+    "if apply_flattening :\n",
     "    tmp = windspeed.nesz_flattening(nesz_cr, dataset.incidence)\n",
     "    tmp.name = 'nesz_VH_final'\n",
     "    print(tmp)\n",
@@ -612,11 +606,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -626,8 +615,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
