--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -140,6 +140,7 @@
     "for ecmwf_name in ['ecmwf_0100_1h' ]:\n",
     "    ecmwf_infos = s1meta.rasters.loc[ecmwf_name]\n",
     "    ecmwf_file = ecmwf_infos['get_function'](ecmwf_infos['resource'], date=datetime.datetime.strptime(s1meta.start_date, '%Y-%m-%d %H:%M:%S.%f'))\n",
+    "    print(ecmwf_file)\n",
     "    ecmwf_file = xsarsea.get_test_file(ecmwf_file[1].split('/')[-1],iszip=False)\n",
     "    map_model = { f'{ecmwf_name}_{uv}' : f'model_{uv}' for uv in ['U10', 'V10'] }"
    ]
@@ -606,6 +607,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -615,7 +621,8 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
