--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -28,6 +28,7 @@
     "import xsar\n",
     "\n",
     "import xsarsea\n",
+    "\n",
     "print(xsarsea.__version__,xsarsea.__file__)\n",
     "from xsarsea import windspeed\n",
     "\n",
@@ -506,11 +507,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -520,8 +516,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
