--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -235,7 +235,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this will directly generate a LUT at high resolution\n",
+    "#\u00a0this will directly generate a LUT at high resolution\n",
     "cmod5.to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1.5, 'inc_step' : 0.5, 'resolution' : 'high'})\n"
    ]
   },
@@ -246,7 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# this will generate a lut at low resolution and then interpolate at high spedified resolution ('resolution'=None)\n",
+    "#\u00a0this will generate a lut at low resolution and then interpolate at high spedified resolution ('resolution'=None)\n",
     "cmod5.to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1.5, 'inc_step' : 0.5, 'resolution' : None})"
    ]
   },
@@ -403,7 +403,7 @@
     "nrcs_{HH} = \\frac{nrcs_{VV}}{PR}\n",
     "$$\n",
     "\n",
-    "For CMOD5n, we created high resolution LUTS (0.1m/s, 0.1°, 1°).\n",
+    "For CMOD5n, we created high resolution LUTS (0.1m/s, 0.1\u00b0, 1\u00b0).\n",
     "\n",
     "For CMOD7, we created low resolution LUTS (base cmod7 resolution from files) and high resolution (from file + interpolation). \n",
     "\n",
@@ -419,7 +419,7 @@
    "source": [
     "# loading low resolution & interpolating \n",
     "windspeed.get_model('nc_lut_gmf_cmod7_Rlow_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})\n",
-    "# or\n",
+    "#\u00a0or\n",
     "# loading high resolution [not computed in the doc cause nc_lut_gmf_cmod7_Rhigh_hh_mouche1 is too big]\n",
     "#windspeed.get_model('nc_lut_gmf_cmod7_Rhigh_hh_mouche1').to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1, 'inc_step' : 0.1, 'resolution' : 'high'})"
    ]
@@ -507,21 +507,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
   }
  },
  "nbformat": 4,
