--- a/docs/examples/windspeed_retrieval_L1.ipynb
+++ b/docs/examples/windspeed_retrieval_L1.ipynb
@@ -204,7 +204,7 @@
     "tags": []
    },
    "source": [
-    "## variables of interest\n",
+    "##\u00a0variables of interest\n",
     "\n",
     "creation of variables of interest for inversion \n",
     "here we could add a land/ice mask."
@@ -608,21 +608,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.11.0"
   }
  },
  "nbformat": 4,
