--- a/docs/examples/create_hh_lut.ipynb
+++ b/docs/examples/create_hh_lut.ipynb
@@ -170,8 +170,8 @@
     "        Resolution (high or low)\n",
     "    pr_depends_on : str, optional\n",
     "        What the PR depends on:\n",
-    "        - 'wspd': PR = f(incidence, wspd) → for Zhang models\n",
-    "        - 'phi': PR = f(incidence, phi) → for Mouche models\n",
+    "        - 'wspd': PR = f(incidence, wspd) \u2192 for Zhang models\n",
+    "        - 'phi': PR = f(incidence, phi) \u2192 for Mouche models\n",
     "        Default: 'wspd'\n",
     "    \"\"\"\n",
     "    \n",
@@ -256,7 +256,7 @@
     "#     \"mouche1_test\", \n",
     "#     xsarsea.windspeed.get_model(\"gmf_cmod5n\").to_lut(**{'resolution':'high'}), \n",
     "#     'high',\n",
-    "#     pr_depends_on='phi'  # ← Mouche: PR = f(incidence, phi)\n",
+    "#     pr_depends_on='phi'  # \u2190 Mouche: PR = f(incidence, phi)\n",
     "# )"
    ]
   },
@@ -334,7 +334,7 @@
     "#     pr_depends_on='phi'\n",
     "# )\n",
     "\n",
-    "# # CMOD7 + Mouche1 - Low Resolution\n",
+    "# #\u00a0CMOD7 + Mouche1 - Low Resolution\n",
     "# create_gmfHH(\n",
     "#     get_pol_ratio_mouche, \n",
     "#     \"cmod7\", \n",
