--- a/docs/examples/gmfs_and_luts.ipynb
+++ b/docs/examples/gmfs_and_luts.ipynb
@@ -171,8 +171,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmod5 = windspeed.get_model('cmod5')\n",
-    "cmod5"
+    "cmod5n = windspeed.get_model('cmod5n')\n",
+    "cmod5n"
    ]
   },
   {
@@ -199,7 +199,7 @@
     "incidence = np.array([25,35,45])\n",
     "wspd = np.array([5, 40])\n",
     "phi = np.array([0, 45, 90])\n",
-    "cmod5(incidence, wspd, phi)"
+    "cmod5n(incidence, wspd, phi)"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmod5.to_lut()"
+    "cmod5n.to_lut()"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "outputs": [],
    "source": [
     "#\u00a0this will directly generate a LUT at high resolution\n",
-    "cmod5.to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1.5, 'inc_step' : 0.5, 'resolution' : 'high'})\n"
+    "cmod5n.to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1.5, 'inc_step' : 0.5, 'resolution' : 'high'})\n"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "#\u00a0this will generate a lut at low resolution and then interpolate at high spedified resolution ('resolution'=None)\n",
-    "cmod5.to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1.5, 'inc_step' : 0.5, 'resolution' : None})"
+    "cmod5n.to_lut(**{'wspd_step' : 0.1, 'phi_step' : 1.5, 'inc_step' : 0.5, 'resolution' : None})"
    ]
   },
   {
